Refactoring for pluggable serialization.